[tool.poetry]
name = "fs-history"
version = "0.1.0"
description = ""
authors = ["Aman Phatak <phatakaman@gmail.com>"]
readme = "README.md"
packages = [{include = "fs_history"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
